<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/q5optgrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <RadioButton
            android:id="@+id/q5opt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5opt1"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/q5opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5opt2"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/q5opt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5opt3"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/q5opt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5opt4"
            android:textSize="20sp"/>
    </RadioGroup>
</RelativeLayout>