<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:background="@drawable/about_back">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#252121"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/devinfo"
        android:layout_marginTop="100dp"
        android:layout_below="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dp"
            android:contentDescription="@string/dev_dp" />

        <LinearLayout
            android:id="@+id/devinfo2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devname"
                android:textColor="#0C3455"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#651010"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/aboutBackBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/back" />


</RelativeLayout>