<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/enterName"
        android:layout_marginBottom="100dp"
        android:text="@string/app_name"
        android:textColor="#0D6711"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/startBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/entername"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#575336"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@id/aboutBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#C30A0A"
        android:text="@string/start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#22CD28"
        android:text="@string/about"
        android:textSize="20sp" />

</RelativeLayout>