<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsPage"
    android:background="@drawable/question_back">

    <TextView
        android:id="@+id/enteredName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="#540761"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enteredName"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <FrameLayout
        android:id="@+id/fragment_section"
        android:layout_width="400dp"
        android:layout_height="224dp"
        android:layout_above="@id/nextques"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp">

    </FrameLayout>

    <Button
        android:id="@+id/nextques"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/quit"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#06BCAB"
        android:text="@string/next_question"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/quit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/scorecard"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/quit" />

    <LinearLayout
        android:id="@+id/scorecard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yourscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/your_score"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0E0C0C"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>


</RelativeLayout>